feat: page 업데이트 하는 api 를 조회만 하도록 변경